feat: 백엔드로 사진 보내기 기능 구현